# HDR_ISP_CPP

./: .gitignore  CMakeLists.txt  FIXED_POINT_CCM_SUMMARY.md  FIXED_POINT_IMPLEMENTATION_SUMMARY.md  HYBRID_BACKEND_README.md  LICENSE  MIGRATION_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  build.ps1  build_bayer_noise_reduction_test.ps1  build_black_level_correction_test.ps1  build_digital_gain_test.ps1  build_lens_shading_correction_test.ps1  install_cmake.ps1  quick_test.cpp  run_test.bat  setup_vcpkg.ps1  test_black_level_correction_halide.cpp  test_black_level_correction_halide_CMakeLists.txt  test_digital_gain_halide.cpp  test_digital_gain_halide_CMakeLists.txt  test_fixed_point_ccm.cpp  test_fixed_point_ccm_CMakeLists.txt  test_fixed_point_performance.cpp  test_hybrid_backend.cpp  test_hybrid_backend_CMakeLists.txt  test_hybrid_pipeline.cpp  test_integration.ps1  test_lens_shading_correction_halide.cpp  test_lens_shading_correction_halide_CMakeLists.txt  test_opencv_opencl.cpp  test_opencv_opencl_CMakeLists.txt  test_pipeline.bat  test_simple.bat
config/: configs.yml  minimal_config.yml  svs_cam.yml  (+1 more)
src/: CMakeLists.txt  infinite_isp.cpp  infinite_isp.hpp  main.cpp
src/common/: CMakeLists.txt  common.cpp  common.hpp  eigen_utils.cpp  eigen_utils.hpp  fixed_point_utils.hpp  halide_utils.hpp  isp_backend_wrapper.cpp
src/modules/: CMakeLists.txt
src/modules/2d_noise_reduction/: 2d_noise_reduction.cpp  2d_noise_reduction.hpp  2d_noise_reduction_hybrid.cpp  2d_noise_reduction_hybrid.hpp  CMakeLists.txt
src/modules/auto_exposure/: CMakeLists.txt  auto_exposure.cpp  auto_exposure.hpp
src/modules/auto_white_balance/: CMakeLists.txt  auto_white_balance.cpp  auto_white_balance.hpp  gray_world.cpp  gray_world.hpp  norm_gray_world.cpp  norm_gray_world.hpp  pca.cpp  pca.hpp
src/modules/bayer_noise_reduction/: CMakeLists.txt  bayer_noise_reduction.cpp  bayer_noise_reduction.hpp  bayer_noise_reduction_halide.hpp
src/modules/black_level_correction/: CMakeLists.txt  black_level_correction.cpp  black_level_correction.hpp  black_level_correction_halide.cpp  black_level_correction_halide.hpp
src/modules/color_correction_matrix/: CMakeLists.txt  color_correction_matrix.cpp  color_correction_matrix.hpp  color_correction_matrix_hybrid.cpp  color_correction_matrix_hybrid.hpp
src/modules/color_space_conversion/: CMakeLists.txt  color_space_conversion.cpp  color_space_conversion.hpp  color_space_conversion_hybrid.cpp  color_space_conversion_hybrid.hpp
src/modules/crop/: CMakeLists.txt  crop.cpp  crop.hpp
src/modules/dead_pixel_correction/: CMakeLists.txt  dead_pixel_correction.cpp  dead_pixel_correction.hpp
src/modules/demosaic/: CMakeLists.txt  demosaic.cpp  demosaic.hpp  demosaic_hybrid.cpp  demosaic_hybrid.hpp
src/modules/digital_gain/: CMakeLists.txt  digital_gain.cpp  digital_gain.hpp  digital_gain_halide.cpp  digital_gain_halide.hpp
src/modules/gamma_correction/: CMakeLists.txt  gamma_correction.cpp  gamma_correction.hpp  gamma_correction_hybrid.cpp  gamma_correction_hybrid.hpp
src/modules/hdr_durand/: CMakeLists.txt  hdr_durand.cpp  hdr_durand.hpp  hdr_durand_hybrid.cpp  hdr_durand_hybrid.hpp
src/modules/ldci/: CMakeLists.txt  clahe_cy.c  clahe_cy.pyx  ldci.cpp  ldci.hpp
src/modules/lens_shading_correction/: CMakeLists.txt  lens_shading_correction.cpp  lens_shading_correction.hpp  lens_shading_correction_halide.cpp  lens_shading_correction_halide.hpp
src/modules/noise_reduction_2d/: CMakeLists.txt
src/modules/oecf/: CMakeLists.txt  oecf.cpp  oecf.hpp
src/modules/pwc_generation/: CMakeLists.txt  pwc_generation.cpp  pwc_generation.hpp
src/modules/rgb_conversion/: CMakeLists.txt  rgb_conversion.cpp  rgb_conversion.hpp  rgb_conversion_hybrid.cpp  rgb_conversion_hybrid.hpp
src/modules/scale/: CMakeLists.txt  scale.cpp  scale.hpp  scale_2d.cpp  scale_2d.hpp  scale_hybrid.cpp  scale_hybrid.hpp
src/modules/sharpen/: CMakeLists.txt  sharpen.cpp  sharpen.hpp
src/modules/white_balance/: CMakeLists.txt  white_balance.cpp  white_balance.hpp
src/modules/yuv_conv_format/: CMakeLists.txt  yuv_conv_format.cpp  yuv_conv_format.hpp
src/util/: eigen_utils.cpp  eigen_utils.hpp  image_saver.cpp  image_saver.hpp  utils.cpp  utils.hpp
test_bayer_noise_reduction_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  HDR_ISP_CPP.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  hdr_isp_pipeline.vcxproj  hdr_isp_pipeline.vcxproj.filters  test_bayer_noise_reduction_halide.cpp
test_bayer_noise_reduction_build/include/: color_space_conversion.hpp  demosaic.hpp  hybrid_backend.hpp  ldci.hpp
test_bayer_noise_reduction_build/src/: infinite_isp.vcxproj  infinite_isp.vcxproj.filters
test_bayer_noise_reduction_build/src/common/: CMakeLists.txt  common.cpp  common.vcxproj  common.vcxproj.filters  eigen_utils.cpp  fixed_point_utils.cpp  halide_utils.cpp  hybrid_backend.cpp  module_ab_test.cpp
test_bayer_noise_reduction_build/src/modules/: isp_modules.vcxproj  isp_modules.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/2d_noise_reduction/: 2d_noise_reduction.vcxproj  2d_noise_reduction.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/auto_exposure/: auto_exposure.vcxproj  auto_exposure.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/auto_white_balance/: auto_white_balance.vcxproj  auto_white_balance.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/bayer_noise_reduction/: bayer_noise_reduction.vcxproj  bayer_noise_reduction.vcxproj.filters  bayer_noise_reduction_halide.cpp
test_bayer_noise_reduction_build/src/modules/black_level_correction/: black_level_correction.vcxproj  black_level_correction.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/color_correction_matrix/: color_correction_matrix.vcxproj  color_correction_matrix.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/color_space_conversion/: color_space_conversion.vcxproj  color_space_conversion.vcxproj.filters
test_bayer_noise_reduction_build/src/modules/crop/: crop.vcxproj  crop.vcxproj.filters
(+347 files in other folders)
