# Add subdirectories for each module
add_subdirectory(demosaic)
add_subdirectory(ldci)
add_subdirectory(hdr_durand)
add_subdirectory(color_space_conversion)
add_subdirectory(auto_exposure)
add_subdirectory(auto_white_balance)
add_subdirectory(bayer_noise_reduction)
add_subdirectory(black_level_correction)
add_subdirectory(color_correction_matrix)
add_subdirectory(lens_shading_correction)
add_subdirectory(noise_reduction_2d)
add_subdirectory(oecf)
add_subdirectory(pwc_generation)
add_subdirectory(scale)
add_subdirectory(sharpen)
add_subdirectory(white_balance)
add_subdirectory(yuv_conv_format) 